--- a/style.css
+++ b/style.css
@@ -1,65 +1,42 @@
+body {
+    background-color: #f5e8e0;
+    font-family: 'Montserrat', sans-serif; 
+    text-align: center; 
+}
+
+#container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;   
+}
 
 .video-item {
-    margin-bottom: 30px;
-    border: 1px solid #ccc;
-    padding: 15px;
-    border-radius: 5px;
-    }
+    background-color: #B0EBB4;
+    border-radius: 8px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    margin: 20px;
+    max-width: 400px;
+    padding: 20px;
+    text-align: left; 
+}
 
-.video-item img {
+.titulo {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.competicion {
+    color: #4e4c4c;
+    font-size: 16px;
+    margin-bottom: 20px;
+}
+
+.miniatura {
     max-width: 100%;
-    height: auto;
-    }
+    border-radius: 5px;
+}
 
-iframe {
-    width: 100%;
-    height: 400px;
-    border: none;
-    }
-
-body {
-        font-family: Arial, sans-serif;
-        line-height: 1.6;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        min-height: 100vh;
-        background-color: #f4f4f4;
-    }
-    .container {
-        max-width: 800px;
-        width: 90%;
-        background-color: white;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        border-radius: 10px;
-        padding: 20px;
-        text-align: center;
-    }
-    h1 {
-        color: #333;
-    }
-    img {
-        max-width: 100%;
-        height: auto;
-        border-radius: 5px;
-        margin-bottom: 15px;
-    }
-    iframe {
-        width: 100%;
-        height: 450px;
-        border: none;
-        border-radius: 5px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-    p {
-        text-align: left;
-        color: #666;
-        margin-top: 15px;
-    }
-    @media (max-width: 600px) {
-        iframe {
-            height: 300px;
-        }
-    }
+.video {
+    margin-top: 15px;
+}
